# e-commerce-ai-agent

./: .gitignore  Makefile  README.md  pyrightconfig.json
backend/agent-service/: .env.example  pyproject.toml  pyrightconfig.json  requirements.txt
backend/agent-service/app/: main.py
backend/agent-service/app/domain/: intents.py
backend/agent-service/app/domain/agents/: langgraph_agent.py
backend/agent-service/app/domain/services/: agent_orchestrator.py  answer_synthesis_service.py  conversation_service.py  intent_service.py  llm_intent_service.py  product_query.py
backend/agent-service/app/domain/tools/: __init__.py  definitions.py  executor.py
backend/agent-service/app/infrastructure/llm/: openai_client.py
backend/agent-service/app/routers/: agent_router.py
backend/agent-service/app/scripts/: test_business_client.py  test_intent.py  test_orchestrator.py
backend/agent-service/app/services/: business_client.py  rag_client.py
backend/api-gateway/: .env.example  pyproject.toml  requirements.txt
backend/api-gateway/app/: main.py
backend/api-gateway/app/routers/: auth_router.py  chat_router.py
backend/api-gateway/app/scripts/: test_gateway.py
backend/api-gateway/app/services/: agent_client.py  auth_client.py
backend/auth-service/: .env.example  pyproject.toml  requirements.txt
backend/auth-service/app/: main.py
backend/auth-service/app/api/: auth.py
backend/auth-service/app/domain/: exceptions.py
backend/auth-service/app/domain/repositories/: user_repository.py
backend/auth-service/app/domain/services/: auth_service.py
backend/auth-service/app/infrastructure/database/: database.py
backend/auth-service/app/schemas/: auth_schemas.py
backend/rag-service/: .env.example  pyproject.toml  requirements.txt
backend/rag-service/app/: main.py
backend/rag-service/app/api/: rag.py
backend/rag-service/app/infrastructure/: pdf_loader.py
backend/rag-service/app/schemas/: rag_schemas.py
backend/rag-service/app/scripts/: generate_policy_pdfs.py  ingest_document.py  test_rag_answer.py  test_retrieval.py
backend/rag-service/app/seeders/: knowledge_seeder.py  product_catalog_seeder.py
(+63 files in other folders)
