[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "email-validator",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app"]
extraPaths = [".venv/lib/python3.14/site-packages"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["app"]
extraPaths = [".venv/lib/python3.14/site-packages"]
