[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "bcrypt",
    "python-jose[cryptography]",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app"]
extraPaths = [".venv/lib/python3.14/site-packages"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["app"]
extraPaths = [".venv/lib/python3.14/site-packages"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
